# hoja-device-fw

./: .gitmodules  CMakeLists.txt  README.md
boards/gcu_proto/: CMakeLists.txt  board_config.h  main.c  main.h  timestamp.h
boards/gcu_r4k/: .gitignore  board_config.h  main.c  main.h  timestamp.h
boards/gcu_s1/: board_config.h  main.c  timestamp.h
boards/phob_2/: CMakeLists.txt  board_config.h  main.c  main.h  timestamp.h
boards/pico_w/: board_config.h  main.c  timestamp.h
boards/progcc_3/: CMakeLists.txt  board_config.h  main.c  main.h  timestamp.h
boards/progcc_3.1/: CMakeLists.txt  board_config.h  main.c  main.h  timestamp.h
boards/progcc_3.2/: CMakeLists.txt  board_config.h  main.c  timestamp.h
boards/progcc_3.3/: CMakeLists.txt  board_config.h  main.c  main.h
boards/progcc_3p/: board_config.h  main.c  main.h  timestamp.h
boards/super_gamepad/: board_config.h  main.c  main.h  timestamp.h
builds/gcu_proto/: gcu_proto.uf2  manifest.json
builds/gcu_r4k/: gcu_r4k.uf2  manifest.json
builds/gcu_s1/: gcu_s1.uf2  manifest.json
builds/phob_2/: manifest.json  phob_2.uf2
builds/pico_w/: manifest.json  pico_w.uf2
builds/progcc_3/: manifest.json  progcc_3.uf2
builds/progcc_3.1/: manifest.json  progcc_3.1.uf2
builds/progcc_3.2/: manifest.json  progcc_3.2.uf2
builds/progcc_3.3/: manifest.json  progcc_3.3.uf2
builds/progcc_3p/: manifest.json  progcc_3p.uf2
builds/super_gamepad/: manifest.json  super_gamepad.uf2
scripts/: CMakeLists.txt  generate_manifest.py  manifest.cmake  timestamp.cmake  timestamp.h
